--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "micro-xml-to-json",
   "description": "Microservice for converting xml to json",
-  "version": "1.0.15",
+  "version": "1.1.0",
   "license": "MIT",
   "private": true,
   "author": {
@@ -11,7 +11,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">=7.10.0"
+    "node": ">=8.8.1"
   },
   "scripts": {
     "test": "standard && nsp check && ava",
@@ -30,12 +30,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/telemark/micro-xml-to-json.git"
+    "url": "git+https://github.com/telemark/micro-xml-to-json.git"
   },
   "bugs": {
     "url": "https://github.com/telemark/micro-xml-to-json/issues"
   },
-  "homepage": "https://github.com/telemark/micro-xml-to-json",
+  "homepage": "https://github.com/telemark/micro-xml-to-json#readme",
   "now": {
     "alias": [
       "xmltojson.microservice.click"
@@ -48,6 +48,7 @@
   "devDependencies": {
     "ava": "0.23.0",
     "coveralls": "3.0.0",
+    "micro-dev": "1.3.0",
     "nsp": "2.8.1",
     "nyc": "11.1.0",
     "standard": "10.0.3",
@@ -55,7 +56,7 @@
   },
   "dependencies": {
     "axios": "0.17.0",
-    "marked": "0.3.6",
+    "markdown-it": "8.4.0",
     "micro": "9.0.0",
     "xml2js": "0.4.17"
   }
