--- a/now.json
+++ b/now.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "name": "micro-xml-to-json",
   "alias": [
     "xmltojson.tjeneste.win"
@@ -7,7 +8,10 @@
   "env": {
     "NODE_ENV": "production"
   },
-  "features": {
-    "cloud": "v2"
-  }
+  "builds": [
+    { "src": "/index.js", "use": "@now/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ]
 }
